# flet_demo_mobile

./: .gitignore  CategoríaPyFlutter_AllGroups_20260217225843 (1).csv  LICENSE  README.md  main.py  propuesta2_peerevalduo_v2 (1).jsx  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-02-perun-flet-recreation.md
src/: __init__.py
src/core/: __init__.py
src/core/error/: __init__.py  exceptions.py
src/core/utils/: result.py
src/data/: __init__.py  utils.py
src/data/datasources/: user_local_datasource.py
src/data/models/: user_model.py
src/data/repositories/: __init__.py  auth_repository_impl.py  course_repository_impl.py  evaluation_repository_impl.py  group_repository_impl.py  teacher_auth_repository_impl.py  unified_auth_repository_impl.py  user_repository_impl.py
src/data/services/: database_service.py
src/domain/: __init__.py
src/domain/entities/: user.py
src/domain/models/: auth_login_result.py  course.py  evaluation.py  group_category.py  peer_evaluation.py  student.py  teacher.py  teacher_data.py
src/domain/repositories/: __init__.py  i_auth_repository.py  (+6 more)
src/presentation/: __init__.py
tests/: test_po_syntax.py
tests/data/: test_auth_repositories.py  test_course_repository.py  test_database_service.py  test_evaluation_repository.py  test_group_repository.py  test_user_model.py  test_user_repository_impl.py
tests/domain/: test_domain_models.py  test_get_users.py  test_user_entity.py
tests/presentation/: test_home_viewmodel.py  test_score_color.py  test_student_viewmodel.py  test_teacher_viewmodel.py
(+27 files in other folders)
